更改部分接口与交互逻辑
